# CPPProjectTemplate

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
src/auto/headers/: Auto.h
src/auto/sources/: Auto.cpp
src/main/sources/: main.cpp
src/sedans/headers/: SedanCar.h
src/sedans/sources/: SedanCar.cpp
src/trucks/headers/: BigTruck.h  Truck.h
src/trucks/sources/: BigTruck.cpp  Truck.cpp
